# SwarmOS

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/swarm_ekf/share/swarm_ekf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/swarm_ekf/: CMakeLists.txt
src/swarm_ekf/src/: ekf_node.cpp
